# Autumn.cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test2.jl
.github/workflows/: build.yml
include/: Expr.hpp  Stmt.hpp
include/interpreter/: AutumnCallable.hpp  AutumnStdLib.hpp  Environment.hpp  Interner.hpp  Interpreter.hpp  VarCollector.hpp
include/interpreter/typesystem/: AutumnType.hpp
include/interpreter/valuesystem/: AutumnCallableValue.hpp  AutumnClass.hpp  AutumnConstructor.hpp  AutumnExprValue.hpp  AutumnInstance.hpp  AutumnLambda.hpp  AutumnValue.hpp
include/parser/: AstPrinter.hpp  Parser.hpp
install_scripts/: setup_emscripten.sh
python_pkg/: __init__.py
python_pkg/autumnstdlib/: __init__.py
src/interpreter/: AutumnStdComponents.cpp  Environment.cpp  ExprMethods.cpp  Interpreter.cpp
src/interpreter/stdlib/: Any.cpp  Clicked.cpp  Defined.cpp  DownPressed.cpp  IsOutsideBounds.cpp  IsWithinBounds.cpp  LeftPressed.cpp  RenderAll.cpp  RightPressed.cpp  Rotate.cpp  UpPressed.cpp  isFreePos.cpp
src/interpreter/typesystem/: AutumnType.cpp
src/interpreter/valuesystem/: AutumnClass.cpp  AutumnExprValue.cpp  AutumnValue.cpp
tools/: bindings.cpp  bindings_julia.cpp  bindings_python.cpp  generate_ast.cpp  main.cpp  parser.cpp
